@@ -6661,6 +6661,103 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|configCmdLine
+operator|.
+name|at
+argument_list|(
+name|i
+argument_list|)
+operator|==
+literal|"-skip"
+condition|)
+block|{
+operator|++
+name|i
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+name|argCount
+condition|)
+break|break;
+name|QString
+name|mod
+init|=
+name|configCmdLine
+operator|.
+name|at
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|mod
+operator|.
+name|startsWith
+argument_list|(
+name|QStringLiteral
+argument_list|(
+literal|"qt"
+argument_list|)
+argument_list|)
+condition|)
+name|mod
+operator|.
+name|insert
+argument_list|(
+literal|0
+argument_list|,
+name|QStringLiteral
+argument_list|(
+literal|"qt"
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|QFileInfo
+argument_list|(
+name|sourcePath
+operator|+
+literal|"/../"
+operator|+
+name|mod
+argument_list|)
+operator|.
+name|isDir
+argument_list|()
+condition|)
+block|{
+name|cout
+operator|<<
+literal|"Attempting to skip non-existent module "
+operator|<<
+name|mod
+operator|<<
+literal|"."
+operator|<<
+name|endl
+expr_stmt|;
+name|dictionary
+index|[
+literal|"DONE"
+index|]
+operator|=
+literal|"error"
+expr_stmt|;
+block|}
+name|skipModules
+operator|+=
+name|mod
+expr_stmt|;
+block|}
 comment|// Directories ----------------------------------------------
 elseif|else
 if|if
@@ -10421,6 +10518,13 @@ argument_list|(
 literal|"-nomake<part>"
 argument_list|,
 literal|"Exclude part from the list of parts to be built.\n"
+argument_list|)
+expr_stmt|;
+name|desc
+argument_list|(
+literal|"-skip<module>"
+argument_list|,
+literal|"Exclude an entire module from the build.\n"
 argument_list|)
 expr_stmt|;
 name|desc
@@ -17558,6 +17662,29 @@ literal|' '
 argument_list|)
 operator|<<
 name|endl
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|skipModules
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+name|moduleStream
+operator|<<
+literal|"QT_SKIP_MODULES += "
+operator|<<
+name|skipModules
+operator|.
+name|join
+argument_list|(
+literal|' '
+argument_list|)
+operator|<<
+name|endl
+expr_stmt|;
+name|moduleStream
 operator|<<
 name|endl
 expr_stmt|;
