@@ -22,6 +22,9 @@ information about a particular change.
 General Improvements
 --------------------
 
+ - [QTBUG-26697] The -skip option was added to configure, which enables not
+   building particular modules. Typical use case: -skip webkit.
+
 Third party components
 ----------------------
 
